bring back java 8 support and fix update checker